# lab

./: .eslintrc.json  .firebaserc  LICENSE  MuseScore.d.ts  README.md  firebase.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  music-separation-build.yml
components/: Layout.tsx  Piano.tsx  atoms.tsx
lib/: MuseScore.ts  approval-rate-crawler.ts  gtag.js  music.ts  utils.ts
pages/: _app.tsx  _document.tsx  globals.css  index.tsx
pages/a-cappella/: chord-practice.tsx
pages/acapella/: chord-practice.tsx  first-sight.tsx  pitch-test.tsx
pages/music/: chord-practice.tsx  musescore-inspector.tsx  musescore-web-player.tsx  music-separation.tsx  pitch-test.tsx  spleeter.tsx
pages/polls/: approval-rate.tsx  todaishimbun.tsx
pages/senkyo/: adams-simulator.tsx  san-2019-tokyo.tsx
pages/u-tokyo/: newspapers.tsx  party-approval-rate.tsx
public/data/: approval-rate.json  minshu-events.yml  prefectures.json  san-2019-tokyo-percent.json  san-2019-tokyo-votes.json  san-2019-tokyo-yukenshasu.json  san-2019-tokyo.json  todaishimbun-polls.json  tokyo-district-name-dict.json  u-tokyo-lib-newspapers.json
public/lib/: essentia-worklet-processor.js
run/music-separation/: Dockerfile  pyproject.toml  server.py
run/spleeter/: Dockerfile  package-lock.json  package.json  requirements.txt  server.ts
